--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="background__div">
         <div class="outer__container">
             <div class="cube__container">
-                <div class="cube__face cube__face__1">1</div>
-                <div class="cube__face cube__face__2">2</div>
-                <div class="cube__face cube__face__3">3</div>
-                <div class="cube__face cube__face__4">4</div>
-                <div class="cube__face cube__face__5">5</div>
-                <div class="cube__face cube__face__6">6</div>
+                <div class="cube__face cube__face__1"></div>
+                <div class="cube__face cube__face__2"></div>
+                <div class="cube__face cube__face__3"></div>
+                <div class="cube__face cube__face__4"></div>
+                <div class="cube__face cube__face__5"></div>
+                <div class="cube__face cube__face__6"></div>
             </div><!--close cube container-->
         </div><!--close outer container-->
     
