save new dimensions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div><!--close cube container-->
         </div><!--close outer container-->
     
-    </div>
+    </div><!--close background div-->
     <p>Image by 
         <a href="https://pixabay.com/users/7089643-7089643/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=4880922">
         Please Don't sell My Artwork AS IS</a> from 
