try removing the decorative background image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="background__div">
+   <!--<div class="background__div">--> 
         <div class="outer__container">
             <div class="cube__container">
                 <div class="cube__face cube__face__1"></div>
