--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
    <div class="background__div">
         <div class="outer__container">
-            <div class="cube__container">
+            <div class="cube__container"> <p class="hero__txt">Exciting
+                <br>
+                Times</p>
                 <div class="cube__face cube__face__1"></div>
                 <div class="cube__face cube__face__2"></div>
                 <div class="cube__face cube__face__3"></div>
